# subnet-guru

./: README.md
api/: README.md  package.json  server.js
api/daemon/: index.js
api/routes/: admin.js  cmd.js  notifs.js  sessions.js
api/templates/: html.js  plaintext.js
docs/: package.json
docs/src/: hackathon.md  index.md
docs/src/.vuepress/: config.js
docs/src/builders/: FAQ.md  README.md  upgrades.md
docs/src/devs/: README.md
docs/src/nodes/: FAQ.md  README.md  monitoring.md  security.md
guru-bot/: .gitignore  Cargo.toml  run
guru-bot/scripts/: run
guru-bot/src/: artwork.rs  commander.rs  crypto.rs  guru.rs  lib.rs  main.rs  messenger.rs  p2p.rs  profiles.rs  utils.rs  welcome.rs
guru-bot/src/artwork/: welcome.rs
guru-bot/src/commander/: sys.rs
guru-bot/src/crypto/: math.rs
guru-bot/src/messenger/: build.rs
guru-bot/src/p2p/: ipfs.rs
guru-bot/src/profiles/: session.rs
guru-bot/src/utils/: epoch.rs  examples.rs  mod.rs  remote.rs
guru-bot/src/welcome/: mod.rs
guru-bot/tests/: check_answer_validity.rs  file_doesnt_exist.rs
web/: package.json
web/public/: index.html
web/src/: App.vue
web/src/components/: ActivityFeed.vue  HeaderView.vue  ModalView.vue  MyGurus.vue  MySubnets.vue  SideBar.vue  SidePanel.vue  SiteHeader.vue
web/src/contracts/: SubnetGuru.json  SubnetGuru.sol
web/src/router/: index.js
web/src/store/: index.js
web/src/views/: AddGuru.vue  BaseView.vue  BlankView.vue  HomeView.vue  MyGurus.vue  RootView.vue  ToolboxView.vue
