[package]
name = "guru"
version = "22.9.18"
authors = ["Ava's DAO <support@avasdao.org>"]
description = "Subnet Gurus offer a total solution for Fi+ projects to Design, Build, Test, Deploy and Manage their bespoke Avalanche Subnets."
homepage = "https://subnet.guru"
repository = "https://github.com/avasdao/subnet-guru"
categories = ["subnets", "cryptocurrency"]
keywords = ["avalanche", "avax", "crypto", "cryptocurrency", "bot", "command-line"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[[bin]]
name = "guru"
path = "src/guru.rs"

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
env_logger = "0.9.0"
human-panic = "1.0.3"
indicatif = "0.17.1"
log = "0.4.17"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.85"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
